objects/Medical_Policy__c.object
<CustomObject>
    <label>Medical Policy</label>
    <nameField>
        <displayFormat>Medical Policy -{0000000}</displayFormat>
        <label>Medical Policy Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Medical Policies</relationshipLabel>
        <relationshipName>Medical_Policies1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Policy_ID__c</fullName>
        <label>Policy ID#</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Title__c</fullName>
        <label>Policy Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Array CGH Postnatal Medical Policy</fullName>
                </value>
                <value>
                    <fullName>Array CGH Prenatal</fullName>
                </value>
                <value>
                    <fullName>NIPT / cell free DNA using maternal serum</fullName>
                </value>
                <value>
                    <fullName>FTS / NT</fullName>
                </value>
                <value>
                    <fullName>Cystic fibrosis</fullName>
                </value>
                <value>
                    <fullName>Preeclampsia</fullName>
                </value>
                <value>
                    <fullName>Carrier Screening</fullName>
                </value>
                <value>
                    <fullName>Next Generation Sequencing Genetic Testing</fullName>
                </value>
                <value>
                    <fullName>NEW TEST</fullName>
                </value>
                <value>
                    <fullName>ViaCord</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_to_Policy__c</fullName>
        <label>Link to Policy</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_status__c</fullName>
        <label>Coverage status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Conditional</fullName>
                </value>
                <value>
                    <fullName>E&amp;I</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_review_date__c</fullName>
        <label>Next review date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_start_date__c</fullName>
        <label>Effective start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ICD_9_Diagnosis_codes__c</fullName>
        <label>ICD-9 / Diagnosis codes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ICD_10_Diagnosis_codes__c</fullName>
        <label>ICD-10 / Diagnosis codes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPT_Codes_listed_in_policy__c</fullName>
        <label>CPT Codes listed in policy</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>